# ocaml-bls12-381

./: .gitignore  .gitlab-ci.yml  CHANGES.md  README.md  bls12-381-base.opam  bls12-381-functors.opam  bls12-381-gen.opam  bls12-381-js-functors.opam  bls12-381-js-gen.opam  bls12-381-js.opam  bls12-381-unix.opam  bls12-381.opam  bls12_381.opam  build_deps.sh  dune-project
benchmark/: .merlin  README.md  bench_ec.ml  bench_ff.ml  bench_g1.ml  bench_pairing.ml  bls12_381_benchmark.install  bls12_381_benchmark.opam  dune  dune-project
common/: jsoo_lib.ml  jsoo_lib.mli
src/: .merlin  Fq.ml  Fq.mli  Fq12.ml  Fq12.mli  Fq2.ml  Fq6.ml  Fr.ml  Fr.mli  bls12_381_stubs.c  bls12_381_stubs_fq.c  bls12_381_stubs_fq12.c  bls12_381_stubs_fq2.c  bls12_381_stubs_fq6.c  bls12_381_stubs_fr.c  bls12_381_stubs_g1.c  bls12_381_stubs_g2.c  bls12_381_stubs_pairing.c  dune  elliptic_curve_sig.mli  ff_sig.mli  g1.ml  g1.mli  g2.ml  g2.mli  pairing.ml
src/base/: Ff_sig.ml  Fq12.ml  Fr.ml  dune  elliptic_curve_sig.ml  g1.ml  g2.ml  pairing.ml
src/config/: .merlin  discover.ml
src/functors/: Ff_sig.ml  Fq12_sig.ml  dune  g1_sig.ml  g2_sig.ml  pairing_sig.ml
src/js/: dune  fq12.ml  fq12.mli  fr.ml  fr.mli  g1.ml  g2.ml  pairing.ml  stubs.ml
src/js-functors/: dune  fq12.ml  fr.ml  g1.ml  g2.ml  pairing.ml
src/js-gen/: dune  fq12.ml  fr.ml  g1.ml  g2.ml  pairing.ml
src/native/: Fq12.ml  Fq12.mli  Fr.ml  Fr.mli  dune  g1.ml  g1.mli  g2.ml  g2.mli  pairing.ml  pairing.mli
src/npm/: Fr.ml  init.js  package-lock.json  package.json
src/unix/: Fq12.ml  Fr.ml  dune  g1.ml  g2.ml  pairing.ml
src/virtual/: Fq12.mli  Fr.mli  dune  g1.mli  g2.mli  pairing.mli
test/: .merlin  dune  test-ec-make.install  test-ec-make.opam  test-ff-make.install  test-ff-make.opam  test.ml  test_ec_make.ml  test_ff_make.ml  test_fq.ml  test_fq12.ml  test_fq2.ml  test_fq6.ml  test_fr.ml  test_g1.ml  test_g2.ml  test_g2_fft.ml  test_pairing.ml
test/js/: alcotest.ml  dune  index.html  lib.ml  package.json  stubs_node.ml  test.ml  test_ec_make.ml  test_fq12.ml  test_fr.ml  test_g1.ml  test_g2.ml  test_pairing.ml  webpack.config.js
test/js-gen/: dune  package.json  stubs_node.ml  test_ff_make.ml  test_fq12.ml  test_fr.ml  test_g1.ml  test_g2.ml  test_pairing.ml
test/js/browser/: dune  package.json  run.js
test/js/node/: dune  run.js
test/native/: test_fr.ml
test/unix/: dune  test_g1_fft.ml
