opam-version: "2.0"
name: "bls12-381-base"
version: "0.3.12"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "Package providing the interface of BLS12-381"
homepage: "https://gitlab.com/dannywillems/ocaml-bls12-381"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-bls12-381.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-bls12-381/issues"
license: "MIT"
depends: [
  "dune" {build & >= "1.7"}
  "dune-configurator" {build}
  "ff" {>= "0.4.0" & < "0.5.0"}
  "zarith" {>= "1.10" & < "2.0"}
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
