opam-version: "2.0"
name: "bls12-381-gen"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "Functors to generate BLS12-381 primitives based on stubs"
description: "Functors to generate BLS12-381 primitives based on stubs"
homepage: "https://gitlab.com/dannywillems/ocaml-bls12-381"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-bls12-381.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-bls12-381/issues"
license: "MIT"
depends: [
  "dune" {build & >= "1.7"}
  "dune-configurator" {build}
  "ff-sig" {>= "0.6.0" & < "0.7.0"}
  "zarith" {>= "1.10" & < "2.0"}
  "alcotest" {with-test}
  "ff-pbt" {>= "0.6.0" & < "0.7.0" & with-test}
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
pin-depends: [
  ["ff-sig.0.6.0" "git+https://gitlab.com/dannywillems/ocaml-ff.git#0.6.0"]
  ["ff-pbt.0.6.0" "git+https://gitlab.com/dannywillems/ocaml-ff.git#0.6.0"]
]
