opam-version: "2.0"
name: "bls12-381-js-functors"
version: "0.3.13"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "Package providing the interface of BLS12-381"
homepage: "https://gitlab.com/dannywillems/ocaml-bls12-381"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-bls12-381.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-bls12-381/issues"
license: "MIT"
depends: [
  "dune" {build & >= "1.7"}
  "dune-configurator" {build}
  "ff" {>= "0.4.0" & < "0.5.0"}
  "zarith" {>= "1.10" & < "2.0"}
  "jsoo-lib" {= "0.0.4"}
  "jsoo-lib-rust-wasm" {= "0.0.4"}
  "zarith_stubs_js"
  "integers_stubs_js"
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
pin-depends: [
  ["jsoo-lib.0.0.4" "git+https://gitlab.com/dannywillems/jsoo-lib.git#dfbe6a864b5f01fc8c7d95f6dbea4c2b7784f822"]
  ["jsoo-lib-rust-wasm.0.0.4" "git+https://gitlab.com/dannywillems/jsoo-lib.git#dfbe6a864b5f01fc8c7d95f6dbea4c2b7784f822"]
]
