opam-version: "2.0"
name: "bls12-381-js"
version: "0.3.13"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "JavaScript version of BLS12-381 primitives implementing the virtual
package bls12-381"
homepage: "https://gitlab.com/dannywillems/ocaml-bls12-381"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-bls12-381.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-bls12-381/issues"
license: "MIT"
depends: [
  "conf-rust" {build}
  "dune" {build & >= "1.7"}
  "dune-configurator" {build}
  "ff" {>= "0.4.0" & < "0.5.0"}
  "zarith" {>= "1.10" & < "2.0"}
  "alcotest" {with-test}
  "bls12-381-gen" {= "0.3.13"}
  "bls12-381" {= "0.3.13"}
  "bls12-381-js-gen" {= "0.3.13"}
  "js_of_ocaml"
  "js_of_ocaml-compiler"
  "js_of_ocaml-ppx"
  "zarith_stubs_js"
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
