opam-version: "2.0"
name: "bls12-381-js"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "JavaScript version of BLS12-381 primitives implementing the virtual
package bls12-381"
description: "JavaScript version of BLS12-381 primitives implementing the virtual
package bls12-381"
homepage: "https://gitlab.com/dannywillems/ocaml-bls12-381"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-bls12-381.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-bls12-381/issues"
license: "MIT"
depends: [
  "conf-rust" {build}
  "dune" {build & >= "1.7"}
  "dune-configurator" {build}
  "ff" {>= "0.4.0" & < "0.5.0"}
  "zarith" {>= "1.10" & < "2.0"}
  "alcotest" {with-test}
  "bls12-381-gen" {= version}
  "bls12-381" {= version}
  "bls12-381-js-gen" {= version}
  "js_of_ocaml" { >= "3.7.1"}
  "js_of_ocaml-compiler" { >= "3.7.1" }
  "js_of_ocaml-ppx" { >= "3.7.1" }
  "zarith_stubs_js"
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
