opam-version: "2.0"
name: "bls12-381-js"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "JavaScript version of BLS12-381 primitives implementing the virtual
package bls12-381"
description: "JavaScript version of BLS12-381 primitives implementing the virtual
package bls12-381"
homepage: "https://gitlab.com/dannywillems/ocaml-bls12-381"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-bls12-381.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-bls12-381/issues"
license: "MIT"
depends: [
  "conf-rust" {build}
  "dune" {build & >= "1.7"}
  "dune-configurator" {build}
  "ff-sig" {>= "0.6.1" & < "0.7.0"}
  "zarith" {>= "1.10" & < "2.0"}
  "bls12-381-gen" {= version}
  "bls12-381" {= version}
  "bls12-381-js-gen" {= version}
  "js_of_ocaml" { >= "3.7.1"}
  "js_of_ocaml-compiler" { >= "3.7.1" }
  "js_of_ocaml-ppx" { >= "3.7.1" }
  "zarith_stubs_js"
  "ff-pbt" {>= "0.6.1" & < "0.7.0" & with-test}
  "alcotest" {with-test}
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
