opam-version: "2.0"
name: "bls12-381-unix"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "UNIX version of BLS12-381 primitives implementing the virtual package
bls12-381"
description: "UNIX version of BLS12-381 primitives implementing the virtual package
bls12-381"
homepage: "https://gitlab.com/dannywillems/ocaml-bls12-381"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-bls12-381.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-bls12-381/issues"
license: "MIT"
depends: [
  "conf-rust" {build}
  "ocaml" {>= "4.08"}
  "dune" {>= "2.7"}
  "dune-configurator" {build}
  "ff-sig" {>= "0.6.1" & < "0.7.0"}
  "zarith" {>= "1.10" & < "2.0"}
  "ctypes" {= "0.17.1"}
  "ctypes-foreign" {= "0.4.0"}
  "bls12-381-gen" {= version}
  "bls12-381" {= version}
  "alcotest" {with-test}
  "ff-pbt" {>= "0.6.0" & < "0.7.0" & with-test}
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
