opam-version: "2.0"
name: "ocaml-bls12-381"
authors: [ "Nomadic Labs <contact@nomadic-labs.com>" ]
maintainer: "Nomadic Labs <contact@nomadic-labs.com>"
synopsis: "OCaml binding for bls12-381 from librustzcash"
homepage: "https://gitlab.com/nomadic-labs/tezos"
bug-reports: "https://gitlab.com/tezos/nomadic-labs/issues"
dev-repo: "git+https://gitlab.com/nomadic-labs/tezos.git"
license: "MIT"
depends: [
  "conf-rust" {build}
  "dune" {build & >= "1.7" & < "2.0.0" }
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
