opam-version: "2.0"
name: "bls12-381-benchmark"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "Benchmark of the OCaml binding for bls12-381 from librustzcash"
homepage: "https://gitlab.com/dannywillems/ocaml-bls12-381"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-bls12-381.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-bls12-381/issues"
license: "MIT"
depends: [
  "conf-rust" {build}
  "dune" {build & >= "1.7" & < "2.0.0" }
  "bls12-381"
  "core_bench"
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
