(executable
 (name bench_ec)
 (modules bench_ec)
 (libraries core_bench bls12-381-base bls12-381 core)
)

(executable
 (name bench_pairing)
 (modules bench_pairing)
 (libraries core_bench bls12-381 bls12-381-base core)
)

(executable
 (name bench_ff)
 (modules bench_ff)
 (libraries core_bench bls12-381 bls12-381-base core)
)
