(rule
 (targets flags.sexp)
 (deps    (:discover config/discover.exe))
 (action  (run %{discover}))
)

(library
 (public_name bls12_381)
 (name bls12_381)
 (modules_without_implementation ff_sig elliptic_curve_sig)
 (library_flags :standard -linkall -ccopt -pthread)
 (c_names bls12_381_stubs_fr bls12_381_stubs_fq12 bls12_381_stubs_g1)
 (c_library_flags (:include flags.sexp))
)
