(executable
 (name test_fr)
 (modules test_fr)
 (libraries bls12_381 alcotest))

(executable
 (name test_fq12)
 (modules test_fq12)
 (libraries bls12_381 alcotest))

(executable
 (name test_g1)
 (modules test_g1)
 (libraries bls12_381 alcotest))


(alias
 (name    runtest-bls12-381-test-g1)
 (action  (run %{exe:test_g1.exe})))

(alias
 (name    runtest-bls12-381-test-fr)
 (action  (run %{exe:test_fr.exe})))

(alias
 (name    runtest-bls12-381-test-fq12)
 (action  (run %{exe:test_fq12.exe})))

(alias
 (name    runtest)
 (deps    (alias runtest-bls12-381-test-fr) (alias runtest-bls12-381-test-fq12) (alias runtest-bls12-381-test-g1)))
