(library
 (name Test_ec_make)
 (public_name test-ec-make)
 (modules Test_ec_make)
 (libraries alcotest bls12_381)
)

(library
 (name Test_ff_make)
 (public_name test-ff-make)
 (modules Test_ff_make)
 (libraries alcotest bls12_381)
)


(tests
 (names test_fr test_fq12 test_g1 test_g2)
 (modules test_fr test_fq12 test_g1 test_g2)
 (libraries test-ff-make test-ec-make bls12_381 alcotest))
