(copy_files bindings/{rustc_bls12_381_ctypes_c_stubs.c,rustc_bls12_381_stubs.ml,rustc_bls12_381_bindings.ml})

(library
 (public_name bls12-381)
 (name bls12_381)
 (libraries zarith ctypes ctypes.foreign ff bls12-381-base)
 (library_flags :standard -linkall -ccopt -pthread)
 (foreign_stubs
  (language c)
  (names rustc_bls12_381_ctypes_c_stubs )
  (flags (-I%{env:OPAM_SWITCH_PREFIX=}/include/rustc-bls12-381))
 )
 (c_library_flags (-L%{env:OPAM_SWITCH_PREFIX=}/lib/rustc-bls12-381 -lrustc_bls12_381 -lpthread))
)
