(executables
 (names test_fq12 test_fr)
 (modules test_fq12 test_fr test_ff_make alcotest)
 (libraries js_of_ocaml
            js_of_ocaml-compiler
            js_of_ocaml-ppx
            zarith
            zarith_stubs_js
            integers
            integers_stubs_js
            jsoo-lib
            jsoo-lib-rust-wasm
            bls12-381-base
            bls12-381-js
 )
 (modes byte)
 (preprocess (pps js_of_ocaml-ppx))
 (flags (:standard ))
)

(rule
 (targets test_fr.js)
 (action
    ( run %{bin:js_of_ocaml}
       %{lib:zarith_stubs_js:biginteger.js}
       %{lib:zarith_stubs_js:runtime.js}
       %{lib:integers_stubs_js:runtime.js}
       ;; Options for debugging purposes
       %{dep:test_fr.bc} --pretty --no-inline -o test_fr.js)
 )
)

(rule
 (targets test_fq12.js)
 (action
   (run %{bin:js_of_ocaml}
      %{lib:zarith_stubs_js:biginteger.js}
      %{lib:zarith_stubs_js:runtime.js}
      %{lib:integers_stubs_js:runtime.js}
      ;; Options for debugging purposes
      %{dep:test_fq12.bc} --pretty --no-inline -o test_fq12.js)
 )
)

(rule (alias runtest) (deps package.json .npmrc test_fq12.js test_fr.js) (action (bash "npm run test")))
; (alias (name default) (deps test_fr.js test_fq12.js package.json .npmrc))
