(executables
 (names test_fq12 test_fr test_g1 test_g2 test_pairing)
 (modules test_fq12 test_fr test_g1 test_g2 test_ff_make test_ec_make alcotest stubs_node test_pairing)
 (libraries js_of_ocaml
            js_of_ocaml-compiler
            js_of_ocaml-ppx
            zarith
            zarith_stubs_js
            integers
            integers_stubs_js
            jsoo-lib
            jsoo-lib-rust-wasm
            bls12-381-base
            bls12-381-js
 )
 (modes byte)
 (preprocess (pps js_of_ocaml-ppx))
 (flags (:standard ))
)

(rule
 (targets test_fr.js)
 (action
    ( run %{bin:js_of_ocaml}
       %{lib:zarith_stubs_js:biginteger.js}
       %{lib:zarith_stubs_js:runtime.js}
       %{lib:integers_stubs_js:runtime.js}
       ;; Options for debugging purposes
       %{dep:test_fr.bc} --pretty --no-inline -o test_fr.js)
 )
)

(rule
 (targets test_fq12.js)
 (action
   (run %{bin:js_of_ocaml}
      %{lib:zarith_stubs_js:biginteger.js}
      %{lib:zarith_stubs_js:runtime.js}
      %{lib:integers_stubs_js:runtime.js}
      ;; Options for debugging purposes
      %{dep:test_fq12.bc} --pretty --no-inline -o test_fq12.js)
 )
)

(rule
 (targets test_g1.js)
 (action
  ( run %{bin:js_of_ocaml}
     %{lib:zarith_stubs_js:biginteger.js}
     %{lib:zarith_stubs_js:runtime.js}
     %{lib:integers_stubs_js:runtime.js}
     ;; Options for debugging purposes
     %{dep:test_g1.bc} --pretty --no-inline -o test_g1.js)
 )
)

(rule
 (targets test_g2.js)
 (action
  ( run %{bin:js_of_ocaml}
     %{lib:zarith_stubs_js:biginteger.js}
     %{lib:zarith_stubs_js:runtime.js}
     %{lib:integers_stubs_js:runtime.js}
     ;; Options for debugging purposes
     %{dep:test_g2.bc} --pretty --no-inline -o test_g2.js)
 )
)

(rule
 (targets test_pairing.js)
 (action
  ( run %{bin:js_of_ocaml}
     %{lib:zarith_stubs_js:biginteger.js}
     %{lib:zarith_stubs_js:runtime.js}
     %{lib:integers_stubs_js:runtime.js}
     ;; Options for debugging purposes
     %{dep:test_pairing.bc} --pretty --no-inline -o test_pairing.js)
 )
)

(rule (alias runtest) (deps package.json .npmrc test_fq12.js test_fr.js test_g1.js test_g2.js test_pairing.js) (action (bash "npm run test")))
