(copy_files ../{*.ml,.npmrc})

(copy_files ../../{*.ml})

(executable
 (name test)
 (libraries js_of_ocaml
            js_of_ocaml-compiler
            js_of_ocaml-ppx
            integers
            integers_stubs_js
            bls12-381-js
 )
 (modes byte)
 (js_of_ocaml)
 (preprocess (pps js_of_ocaml-ppx))
 (flags (:standard -w -33))
)

(rule
 (targets test.js)
 (action
  (run %{bin:js_of_ocaml}
    %{lib:zarith_stubs_js:biginteger.js}
    %{lib:zarith_stubs_js:runtime.js}
    %{lib:integers_stubs_js:runtime.js}
    %{dep:test.bc} --pretty --no-inline -o test.js
  )
 )
)

(rule (alias serve) (deps webpack.config.js package.json .npmrc test.js run.js) (action (bash "npm install -d")))
