(copy_files ../{*.ml,.npmrc})

(copy_files ../../{*.ml})

;; We build first the bytecode to be used by the jsoo compiler
(executable
 (name test)
 (libraries js_of_ocaml
            js_of_ocaml-compiler
            js_of_ocaml-ppx
            bls12-381-js
 )
 (modes byte)
 (js_of_ocaml)
 (preprocess (pps js_of_ocaml-ppx))
 (flags (:standard -w -33))
)

;; Stanza to build PrintHello.js, result of the jsoo compilation.
(rule
 (targets test.js)
 (action
  (run %{bin:js_of_ocaml}
    %{lib:zarith_stubs_js:biginteger.js}
    %{lib:zarith_stubs_js:runtime.js}
    ;; Options for debugging purposes
    %{dep:test.bc} --pretty --no-inline -o test.js
  )
 )
)

(rule (alias runtest) (deps package.json .npmrc test.js run.js) (action (bash "npm run test")))
